--- a/package.json
+++ b/package.json
@@ -7,18 +7,6 @@
     "build": "vue-cli-service build --modern",
     "test:unit": "vue-cli-service test:unit"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/unification-com/web-wallet.git"
-  },
-  "keywords": [
-    "UND"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/unification-com/web-wallet/issues"
-  },
-  "homepage": "https://github.com/unification-com/web-wallet#readme",
   "dependencies": {
     "@unification-com/und-js": "^1.1.0",
     "big.js": "^5.2.2",
@@ -31,13 +19,33 @@
     "vue-router": "^3.1.3"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.7.0",
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-router": "^4.1.0",
     "@vue/cli-plugin-unit-jest": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "@vue/test-utils": "1.0.0-beta.29",
+    "bootstrap": "^4.3.1",
+    "mutationobserver-shim": "^0.3.3",
+    "popper.js": "^1.16.0",
+    "portal-vue": "^2.1.6",
+    "sass": "^1.19.0",
+    "sass-loader": "^8.0.0",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
+    "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "bugs": {
+    "url": "https://github.com/unification-com/web-wallet/issues"
+  },
+  "homepage": "https://github.com/unification-com/web-wallet#readme",
+  "keywords": [
+    "UND"
+  ],
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/unification-com/web-wallet.git"
   }
 }
