update Dockerfiles to build to correct dist directory, and output warning for hosted version

--- a/Docker/builder/Dockerfile
+++ b/Docker/builder/Dockerfile
@@ -3,8 +3,9 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY ./ .
-RUN npm run build
+RUN echo "VUE_APP_HOSTED=true" > /app/.env
+RUN npm run build:web
 
-RUN tar -cvzf /web-wallet.tar.gz dist
+RUN tar -cvzf /web-wallet.tar.gz dist/web
 RUN openssl dgst -sha256 /web-wallet.tar.gz > /web-wallet.tar.gz.sha
 
