--- a/Docker/builder/Dockerfile
+++ b/Docker/builder/Dockerfile
@@ -6,6 +6,5 @@ COPY ./ .
 RUN echo "VUE_APP_HOSTED=true" > /app/.env
 RUN npm run build:web
 
-RUN tar -cvzf /web-wallet.tar.gz dist/web
+RUN tar -c --transform='s,^dist/web/,dist/,' -zvf /web-wallet.tar.gz dist/web
 RUN openssl dgst -sha256 /web-wallet.tar.gz > /web-wallet.tar.gz.sha
-
