--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-wallet",
-  "version": "0.8.0",
+  "version": "0.9.0",
   "private": true,
   "description": "Unification UND Mainchain Web Wallet",
   "scripts": {
@@ -17,6 +17,7 @@
     "bootstrap-vue": "^2.2.1",
     "core-js": "^3.4.4",
     "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
     "popper.js": "^1.16.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
