--- a/Docker/wallet/Dockerfile
+++ b/Docker/wallet/Dockerfile
@@ -8,4 +8,4 @@ RUN npm run build:web
 FROM nginx as production-stage
 RUN mkdir /app
 COPY --from=build-stage /app/dist/web /app
-COPY nginx.conf /etc/nginx/nginx.conf
+COPY Docker/wallet/nginx.conf /etc/nginx/nginx.conf
