--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@unification-com/und-js": "^1.5.0",
+    "axios": "^0.19.2",
     "big.js": "^5.2.2",
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.2.1",
