--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 2,
-  "name": "UND Web Wallet",
+  "name": "Unification Web Wallet",
   "homepage_url": "https://unification.com",
-  "description": "Unification UND Web Wallet Browser Extension",
+  "description": "Unification Web Wallet Browser Extension",
   "default_locale": "en",
   "permissions": [],
   "icons": {
@@ -17,7 +17,7 @@
     "persistent": false
   },
   "browser_action": {
-    "default_title": "UND Web Wallet",
+    "default_title": "Unification Web Wallet",
     "default_icon": {
       "19": "icons/19.png",
       "38": "icons/38.png"
