--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-wallet",
-  "version": "0.18.0-beta1",
+  "version": "0.18.0",
   "private": true,
   "description": "Unification Mainchain Web Wallet",
   "scripts": {
