--- a/package.json
+++ b/package.json
@@ -11,34 +11,64 @@
     "serve:web": "vue-cli-service serve --open"
   },
   "dependencies": {
-    "@unification-com/und-js": "^1.7.1",
+    "@babel/runtime": "^7.11.0",
+    "@ledgerhq/hw-transport": "^5.21.0",
+    "@unification-com/und-js": "^1.8.3",
     "axios": "^0.19.2",
     "big.js": "^5.2.2",
-    "bootstrap-vue": "^2.15.0",
+    "bootstrap": "^4.5.0",
+    "bootstrap-vue": "^2.16.0",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.19",
     "vue": "^2.6.10",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.3.4",
-    "vuex": "^3.4.0"
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/polyfill": "^7.10.1",
+    "@babel/cli": "^7.7.6",
+    "@babel/core": "^7.7.5",
+    "@babel/node": "^7.7.6",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@ledgerhq/hw-transport-u2f": "^4.78.0",
+    "@ledgerhq/hw-transport-webusb": "^4.78.0",
+    "@ledgerhq/logs": "^4.72.0",
     "@vue/cli-plugin-babel": "^4.4.6",
+    "@vue/cli-plugin-eslint": "^4.4.6",
     "@vue/cli-plugin-router": "^4.4.6",
     "@vue/cli-plugin-unit-jest": "^4.4.6",
     "@vue/cli-plugin-vuex": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "@vue/test-utils": "1.0.0-beta.29",
-    "bootstrap": "^4.5.0",
+    "babel-eslint": "^10.0.3",
+    "babel-jest": "^24.9.0",
+    "bip32": "2.0.4",
+    "bip39": "3.0.2",
+    "core-js": "^3.4.8",
+    "crypto-js": "3.1.9-1",
     "copy-webpack-plugin": "^5.1.1",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "^2.19.1",
+    "eslint-plugin-jest": "^23.1.1",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-vue": "^6.0.1",
+    "index.js": "^0.0.3",
+    "jest": "^24.9.0",
+    "jest-serial-runner": "^1.1.0",
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.6",
-    "sass": "^1.26.9",
+    "prettier": "^1.19.1",
+    "sass": "^1.26.10",
     "sass-loader": "^8.0.2",
-    "stylus": "^0.54.7",
+    "secp256k1": "^3.7.1",
+    "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
+    "vue": "^2.6.10",
     "vue-cli-plugin-bootstrap-vue": "^0.6.0",
     "vue-cli-plugin-browser-extension": "^0.24.2",
     "vue-template-compiler": "^2.6.10"
