--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-wallet",
-  "version": "0.19.0-beta",
+  "version": "0.18.3",
   "private": true,
   "description": "Unification Mainchain Web Wallet",
   "scripts": {
@@ -11,50 +11,52 @@
     "serve:web": "vue-cli-service serve --open"
   },
   "dependencies": {
-    "@babel/runtime": "^7.11.0",
-    "@ledgerhq/hw-transport": "^5.21.0",
-    "@unification-com/und-js": "^1.8.5",
-    "axios": "^0.19.2",
+    "@babel/runtime": "^7.12.18",
+    "@ledgerhq/hw-transport": "^5.43.0",
+    "@tendermint/belt": "^0.3.0",
+    "@unification-com/und-js": "^1.8.6",
+    "axios": "^0.21.1",
+    "bech32": "^2.0.0",
     "big.js": "^5.2.2",
-    "bootstrap": "^4.5.0",
-    "bootstrap-vue": "^2.16.0",
-    "core-js": "^3.6.5",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "create-hash": "^1.2.0",
     "jquery": "^3.5.1",
-    "lodash": "^4.17.19",
-    "vue": "^2.6.10",
+    "lodash": "^4.17.21",
+    "vue": "^2.6.12",
     "vue-notification": "^1.3.20",
-    "vue-router": "^3.3.4",
-    "vuex": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/cli": "^7.7.6",
-    "@babel/core": "^7.7.5",
-    "@babel/node": "^7.7.6",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.6",
+    "@babel/cli": "^7.12.17",
+    "@babel/core": "^7.12.17",
+    "@babel/node": "^7.12.17",
+    "@babel/plugin-transform-runtime": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
     "@ledgerhq/hw-transport-u2f": "^4.78.0",
     "@ledgerhq/hw-transport-webusb": "^4.78.0",
     "@ledgerhq/logs": "^4.72.0",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-eslint": "^4.4.6",
-    "@vue/cli-plugin-router": "^4.4.6",
-    "@vue/cli-plugin-unit-jest": "^4.4.6",
-    "@vue/cli-plugin-vuex": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
+    "@vue/cli-plugin-babel": "^4.5.11",
+    "@vue/cli-plugin-eslint": "^4.5.11",
+    "@vue/cli-plugin-router": "^4.5.11",
+    "@vue/cli-plugin-unit-jest": "^4.5.11",
+    "@vue/cli-plugin-vuex": "^4.5.11",
+    "@vue/cli-service": "^4.5.11",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-eslint": "^10.0.3",
     "babel-jest": "^24.9.0",
     "bip32": "2.0.4",
     "bip39": "3.0.2",
-    "core-js": "^3.4.8",
-    "crypto-js": "3.1.9-1",
     "copy-webpack-plugin": "^5.1.1",
+    "core-js": "^3.9.0",
+    "crypto-js": "3.1.9-1",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-config-prettier": "^6.7.0",
-    "eslint-plugin-import": "^2.19.1",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^23.1.1",
-    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^6.0.1",
     "index.js": "^0.0.3",
     "jest": "^24.9.0",
@@ -63,15 +65,14 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.6",
     "prettier": "^1.19.1",
-    "sass": "^1.26.10",
+    "sass": "^1.32.8",
     "sass-loader": "^8.0.2",
     "secp256k1": "^3.7.1",
     "stylus": "^0.54.8",
     "stylus-loader": "^3.0.2",
-    "vue": "^2.6.10",
     "vue-cli-plugin-bootstrap-vue": "^0.6.0",
-    "vue-cli-plugin-browser-extension": "^0.24.2",
-    "vue-template-compiler": "^2.6.10"
+    "vue-cli-plugin-browser-extension": "^0.25.1",
+    "vue-template-compiler": "^2.6.12"
   },
   "bugs": {
     "url": "https://github.com/unification-com/web-wallet/issues"
