results chart for governance

--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.18",
-    "@chenfengyuan/vue-countdown": "1",
+    "@chenfengyuan/vue-countdown": "^1.1.5",
     "@ledgerhq/hw-transport": "^5.43.0",
     "@unification-com/und-js-v2": "^0.1.1",
     "bech32": "^2.0.0",
     "big.js": "^5.2.2",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
+    "chart.js": "^2.9.4",
     "create-hash": "^1.2.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
