--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "web-wallet",
-  "version": "0.20.2-beta",
+  "version": "0.20.3",
   "private": true,
   "description": "Unification Mainchain Web Wallet",
   "engines": {
@@ -26,6 +26,7 @@
     "create-hash": "^1.2.0",
     "jquery": "^3.5.1",
     "lodash": "^4.17.21",
+    "semver": "^7.3.5",
     "vue": "^2.6.12",
     "vue-notification": "^1.3.20",
     "vuex": "^3.6.2"
